--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -13,6 +13,15 @@
             > img{
                 max-height: 40px;
             }
+
+            > div{
+                display:flex;
+                gap: 16px;
+
+                button{
+                   height: 40px; 
+                }
+            }
         }
     }
 
@@ -98,6 +107,9 @@
                     }
                 }
             }
+        }
+        .questionList{
+            margin-top: 32px;
         }
     }
 }
