--- a/src/components/Question/styles.scss
+++ b/src/components/Question/styles.scss
@@ -8,6 +8,19 @@
         margin-top:  8px;
     }
 
+    &.highlighted {
+        background: #f4f0ff;
+        border: 1px solid #835afd;
+
+        footer .user-info span {
+            color: #29292e;
+        }
+    }
+   
+    &.answered {
+        background: #d8dcdd;
+    }
+
 
     p{
         color: #29292e
@@ -37,6 +50,11 @@
             }
           
 
+        }
+
+        > div{
+            display: flex;
+            gap: 13px;
         }
 
         button{
