--- a/src/styles/room-code.scss
+++ b/src/styles/room-code.scss
@@ -4,17 +4,18 @@
     overflow: hidden;
 
     background: #fff;
-    border: 1px solid #835afd;
+    border: 1px solid #000000;
     cursor: pointer;
 
     display: flex;
 
     div{
-        background: #835afd;
+        background: #000000;
         padding: 0 12px;
         display: flex;
         justify-content: center;
-        align-items: center;        
+        align-items: center;    
+        height: 100%;    
     }
 
     span{
