--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -5,7 +5,7 @@
 
     aside{
         flex: 7;
-        background: #835afd;
+        background: #000000;
         color: #fff;
 
         display:flex;
@@ -15,7 +15,7 @@
         padding: 120px 80px;
 
         img{
-        max-width:  320px;          
+        max-width:  450px;          
         }
         strong{
             font: 700 36px 'Poppins', sans-serif;
@@ -37,6 +37,7 @@
         display:flex;
         align-items:center;
         justify-content:center;
+        background: rgb(255, 255, 255);
     }
 
     .mainContent{
@@ -55,6 +56,7 @@
         font-size:24px;
         margin: 64px 0 24px;
         font-family: 'Poppins', sans-serif;
+        color: #000000;
     }
 
     form{
@@ -63,7 +65,7 @@
             border-radius: 8px;
             padding:0 16px;
             background: #fff;
-            border: 1px solid #9797a0;
+            border: 1px solid #3cff00;
    }
    button{
        margin-top: 16px;
@@ -80,7 +82,7 @@
     margin-top: 16px;
 
     a{
-        color: #de4ef1;
+        color: #3cff00;
     }
   }
  }
@@ -112,7 +114,7 @@
 
 .separator{
     font-size:14px;
-    color: #9797a0;
+    color: #000000;
 
     margin: 32px 0;
     display:flex;
@@ -122,7 +124,7 @@
         content: '';
         flex: 1;
         height: 1px;
-        background: #9797a0;
+        background: #3cff00;
         margin-right: 16px;
     }
 
@@ -130,7 +132,7 @@
         content: '';
         flex: 1;
         height: 1px;
-        background: #9797a0;
+        background: #3cff00;
         margin-left: 16px;
     }
 }
