--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -2,7 +2,7 @@
     height: 50px;
     border-radius: 8px;
     font-weight: 500;
-    background: #835afd;
+    background: #1eff00;
     color: #fff;
     padding:0 32px;
 
@@ -19,8 +19,8 @@
 
     &.outlined{
         background: #fff;
-        border: 1px solid #835afd;
-        color: #835afd;
+        border: 1px solid #000000;
+        color: #000000;
     }
 
     &.outlined:hover{
